--- a/contact-us.html
+++ b/contact-us.html
@@ -36,7 +36,7 @@
                 <!-- RD Navbar Toggle-->
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <!-- RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a class="brand" href="index.html"><h2>Global Muscats</h2></a>
+                <div class="rd-navbar-brand"><a class="brand" href="index.html"><h2>global muscat</h2></a>
                 </div>
               </div>
               <div class="rd-navbar-nav-wrap">
