--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Incorporate the time schedule obtained from Project Management in Primavera/MS P
             <div class="col-sm-10 col-lg-5 wow fadeInRightSmall">
               <div class="badge">why us</div>
               <h3>Reasons People<br>Choose Global Muscat </h3>
-              <p class="big inset-3" style="letter-spacing: .025em">Unmatched experience of being in the industry for decades, delivering global projects, conforming to all the codes and standards. Over 50 projects and 10 airport projects delivered.</p>
+              <p class="big inset-3" style="letter-spacing: .025em">Unmatched experience of being in the industry for decades, delivering global projects, conforming to all the codes and standards. Over 50 projects<br> and 10 airport projects delivered.</p>
               <ul class="list-marked">
                 <li>Qualified team</li>
                 <li>15+ years of expertise</li>
@@ -216,15 +216,21 @@ Incorporate the time schedule obtained from Project Management in Primavera/MS P
       <footer class="section footer-classic">
         <div class="footer-classic-main">
           <div class="container">
-            <div class="row row-50 justify-content-lg-center">
-              <div class="col-sm-7 col-lg-7 col-xl-7"><a class="brand" href="index.html"><h2>Global Muscats</h2></a>
-                <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
-                  <div class="row row-10 text-default">
-                    <div class="col-lg-6 col-xl-12"><a href="mailto:#">info@demolink.org</a></div>
-                    <div class="col-lg-6 col-xl-12"><a class="big" href="tel:#">+91 808 632 3625</a></div>
+            <div class="row row-50 justify-content-center">
+              
+
+
+               
+                <div class="col-7 col-sm-7 col-lg-7 col-xl-7">
+                  <div class="row row-10 text-center justify-content-center">
+                    <div class="col-lg-7 col-xl-7"> <a  class="brand " href="index.html">
+                      Global muscat
+                    </a></div>
+                    <div class="col-lg-7 col-xl-7"><a href="mailto:#">info@demolink.org</a></div>
+                    <div class="col-lg-7 col-xl-7"><a class="big" href="tel:#">+91 808 632 3625</a></div>
                   </div>
                 </div>
-                <div class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left">
+                <div class="col-7 col-sm-7 col-lg-7 col-xl-7 text-center text-sm-center">
                   <div class="group group-xs"><a class="link link-social-1 mdi mdi-twitter" href="#"></a><a class="link link-social-1 mdi mdi-facebook" href="#"></a><a class="link link-social-1 mdi mdi-instagram" href="#"></a></div>
                 </div>
               </div>
