--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                   </li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About Us</a>
                   </li>
+                </li>
+                <li class="rd-nav-item "><a class="rd-nav-link" href="portfolio.html">Portfolio</a>
+                </li>
   
                   </li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="contact-us.html">Contact Us</a>
